--- a/index.html
+++ b/index.html
@@ -28,47 +28,47 @@
           <div class="col d-flex justify-content-center">
             <h2>Monday</h2>
             <div class="mt-5">
-              <h3 class="hours mt-4"></h3>
-              <button class="btn btn-sm btn-outline-success" onclick="">+</button>
-              <button class="btn btn-sm btn-outline-danger" onclick="">-</button>
+              <h3 class="hours mt-4" id="w1m">0</h3>
+              <button class="btn btn-sm btn-outline-success" onclick="addHour(0, 0)">+</button>
+              <button class="btn btn-sm btn-outline-danger" onclick="subHour(0, 0)">-</button>
             </div>
           </div>
           <div class="col d-flex justify-content-center">
             <h2>Tuesday</h2>
             <div class="mt-5">
-              <h3 class="hours mt-4"></h3>
-              <button class="btn btn-sm btn-outline-success" onclick="">+</button>
-              <button class="btn btn-sm btn-outline-danger" onclick="">-</button>
+              <h3 class="hours mt-4" id="w1tu">0</h3>
+              <button class="btn btn-sm btn-outline-success" onclick="addHour(0, 1)">+</button>
+              <button class="btn btn-sm btn-outline-danger" onclick="subHour(0, 1)">-</button>
             </div>
           </div>
           <div class="col d-flex justify-content-center">
             <h2>Wednesday</h2>
             <div class="mt-5">
-              <h3 class="hours mt-4"></h3>
-              <button class="btn btn-sm btn-outline-success" onclick="">+</button>
-              <button class="btn btn-sm btn-outline-danger" onclick="">-</button>
+              <h3 class="hours mt-4" id="w1w">0</h3>
+              <button class="btn btn-sm btn-outline-success" onclick="addHour(0, 2)">+</button>
+              <button class="btn btn-sm btn-outline-danger" onclick="subHour(0, 2)">-</button>
             </div>
           </div>
           <div class="col d-flex justify-content-center">
             <h2>Thursday</h2>
             <div class="mt-5">
-              <h3 class="hours mt-4"></h3>
-              <button class="btn btn-sm btn-outline-success" onclick="">+</button>
-              <button class="btn btn-sm btn-outline-danger" onclick="">-</button>
+              <h3 class="hours mt-4" id="w1th">0</h3>
+              <button class="btn btn-sm btn-outline-success" onclick="addHour(0, 3)">+</button>
+              <button class="btn btn-sm btn-outline-danger" onclick="subHour(0, 3)">-</button>
             </div>
           </div>
           <div class="col d-flex justify-content-center">
             <h2>Friday</h2>
             <div class="mt-5">
-              <h3 class="hours mt-4"></h3>
-              <button class="btn btn-sm btn-outline-success" onclick="">+</button>
-              <button class="btn btn-sm btn-outline-danger" onclick="">-</button>
+              <h3 class="hours mt-4" id="w1f">0</h3>
+              <button class="btn btn-sm btn-outline-success" onclick="addHour(0, 4)">+</button>
+              <button class="btn btn-sm btn-outline-danger" onclick="subHour(0, 4)">-</button>
             </div>
           </div>
           <div class="col d-flex justify-content-center">
             <h2>Week 1 Total</h2>
             <div class=" mt-5">
-              <h3 class="hours mt-4" id="week1Total"></h3>
+              <h3 class="hours mt-4" id="week1Total">0</h3>
             </div>
           </div>
         </div>
@@ -78,47 +78,47 @@
           <div class="col d-flex justify-content-center">
             <h2>Monday</h2>
             <div class="mt-5">
-              <h3 class="hours mt-4"></h3>
-              <button class="btn btn-sm btn-outline-success" onclick="">+</button>
-              <button class="btn btn-sm btn-outline-danger" onclick="">-</button>
+              <h3 class="hours mt-4" id="w2m">0</h3>
+              <button class="btn btn-sm btn-outline-success" onclick="addHour(1, 0)">+</button>
+              <button class="btn btn-sm btn-outline-danger" onclick="subHour(1, 0)">-</button>
             </div>
           </div>
           <div class="col d-flex justify-content-center">
             <h2>Tuesday</h2>
             <div class="mt-5">
-              <h3 class="hours mt-4"></h3>
-              <button class="btn btn-sm btn-outline-success" onclick="">+</button>
-              <button class="btn btn-sm btn-outline-danger" onclick="">-</button>
+              <h3 class="hours mt-4" id="w2tu">0</h3>
+              <button class="btn btn-sm btn-outline-success" onclick="addHour(1, 1)">+</button>
+              <button class="btn btn-sm btn-outline-danger" onclick="subHour(1, 1)">-</button>
             </div>
           </div>
           <div class="col d-flex justify-content-center">
             <h2>Wednesday</h2>
             <div class="mt-5">
-              <h3 class="hours mt-4"></h3>
-              <button class="btn btn-sm btn-outline-success" onclick="">+</button>
-              <button class="btn btn-sm btn-outline-danger" onclick="">-</button>
+              <h3 class="hours mt-4" id="w2w">0</h3>
+              <button class="btn btn-sm btn-outline-success" onclick="addHour(1, 2)">+</button>
+              <button class="btn btn-sm btn-outline-danger" onclick="subHour(1, 2)">-</button>
             </div>
           </div>
           <div class="col d-flex justify-content-center">
             <h2>Thursday</h2>
             <div class="mt-5">
-              <h3 class="hours mt-4"></h3>
-              <button class="btn btn-sm btn-outline-success" onclick="">+</button>
-              <button class="btn btn-sm btn-outline-danger" onclick="">-</button>
+              <h3 class="hours mt-4" id="w2th">0</h3>
+              <button class="btn btn-sm btn-outline-success" onclick="addHour(1, 3)">+</button>
+              <button class="btn btn-sm btn-outline-danger" onclick="subHour(1, 3)">-</button>
             </div>
           </div>
           <div class="col d-flex justify-content-center">
             <h2>Friday</h2>
             <div class="mt-5">
-              <h3 class="hours mt-4"></h3>
-              <button class="btn btn-sm btn-outline-success" onclick="">+</button>
-              <button class="btn btn-sm btn-outline-danger" onclick="">-</button>
+              <h3 class="hours mt-4" id="w2f">0</h3>
+              <button class="btn btn-sm btn-outline-success" onclick="addHour(1, 4)">+</button>
+              <button class="btn btn-sm btn-outline-danger" onclick="subHour(1, 4)">-</button>
             </div>
           </div>
           <div class="col d-flex justify-content-center">
             <h2>Week 2 Total</h2>
             <div class=" mt-5">
-              <h3 class="hours mt-4" id="week2Total"></h3>
+              <h3 class="hours mt-4" id="week2Total">0</h3>
             </div>
           </div>
         </div>
@@ -127,10 +127,18 @@
 
     <div class="row mt-5">
       <div class="col-10 d-flex justify-content-end">
-        <h2 class="cummulative mt-5">Cummulative Total</h2>
+        <h2 class="cummulative mt-5">Total Hours Worked:</h2>
       </div>
       <div class="col-2 d-flex justify-content-center">
-        <h2 id="grandTotal"></h2>
+        <h2 class="mt-5" id="grandTotal">0</h2>
+      </div>
+    </div>
+    <div class="row mt-1">
+      <div class="col-10 d-flex justify-content-end">
+        <h2 class="">Cummulative Pay @ $75/hr:</h2>
+      </div>
+      <div class="col-2 d-flex justify-content-center">
+        <h2 class="" id="grandPay">0</h2>
       </div>
     </div>
 
