--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
     </div>
 
     <div class="row mt-5">
-      <div class="col-3 offset-3 mt-5">
+      <div class="col-2 offset-4 mt-5">
         <div class="input-group mt-5">
-          <input id="hourlyWage" type="text" class="form-control shadow" placeholder="Enter hourly wage..." aria-label=""
+          <input id="hourlyWage" type="text" class="form-control shadow" placeholder="Hourly wage..." aria-label=""
             aria-describedby="basic-addon1" data-target="">
           <div class="input-group-append">
             <button class="btn btn-success shadow" type="button" onclick="earned()">Submit</button>
@@ -148,7 +148,7 @@
         </div>
         <div class="row mt-1">
           <div class="col-10 d-flex justify-content-end">
-            <h2 class="">Cummulative Pay @ $<span id="rate"> ______ </span>/hour:</h2>
+            <h2 class="">Cummulative Pay $<span id="rate"> ______ </span>/hour:</h2>
           </div>
           <div class="col-2 d-flex justify-content-center">
             <h2 class="" id="grandPay">0</h2>
