--- a/index.html
+++ b/index.html
@@ -17,127 +17,128 @@
   <div class="container-fluid">
     <div class="row mt-4">
       <div class="col-12 text-center">
-        <h1>Bi-Weekly-TimeSheet</h1>
+        <h2>Bi-Weekly-TimeSheet</h2>
       </div>
     </div>
 
-    <!-- week 1 -->
-    <div class="row mt-5">
-      <div class="col-12">
-        <div class="row">
+    <!-- week 1, 2 -->
+    <div class="row mt-4 top">
+      <div class="col-10 offset-1">
+        <div class="row mt-2 w1 py-3">
           <div class="col d-flex justify-content-center">
-            <h2>Monday</h2>
-            <div class="mt-5">
+            <div class="text-center">
+              <h4>Monday</h4>
               <h3 class="hours mt-4" id="w1m">0</h3>
-              <button class="btn btn-sm btn-outline-success" onclick="addHour(0, 0)">+</button>
-              <button class="btn btn-sm btn-outline-danger" onclick="subHour(0, 0)">-</button>
+              <button class="btn btn-sm shadow btn-outline-success mt-2" onclick="addHour(0, 0)">+</button>
+              <button class="btn btn-sm shadow btn-outline-danger mt-2" onclick="subHour(0, 0)">-</button>
             </div>
           </div>
           <div class="col d-flex justify-content-center">
-            <h2>Tuesday</h2>
-            <div class="mt-5">
+            <div class="text-center">
+              <h4>Tuesday</h4>
               <h3 class="hours mt-4" id="w1tu">0</h3>
-              <button class="btn btn-sm btn-outline-success" onclick="addHour(0, 1)">+</button>
-              <button class="btn btn-sm btn-outline-danger" onclick="subHour(0, 1)">-</button>
+              <button class="btn btn-sm shadow btn-outline-success mt-2" onclick="addHour(0, 1)">+</button>
+              <button class="btn btn-sm shadow btn-outline-danger mt-2" onclick="subHour(0, 1)">-</button>
             </div>
           </div>
           <div class="col d-flex justify-content-center">
-            <h2>Wednesday</h2>
-            <div class="mt-5">
+            <div class="text-center">
+              <h4>Wednesday</h4>
               <h3 class="hours mt-4" id="w1w">0</h3>
-              <button class="btn btn-sm btn-outline-success" onclick="addHour(0, 2)">+</button>
-              <button class="btn btn-sm btn-outline-danger" onclick="subHour(0, 2)">-</button>
+              <button class="btn btn-sm shadow btn-outline-success mt-2" onclick="addHour(0, 2)">+</button>
+              <button class="btn btn-sm shadow btn-outline-danger mt-2" onclick="subHour(0, 2)">-</button>
             </div>
           </div>
           <div class="col d-flex justify-content-center">
-            <h2>Thursday</h2>
-            <div class="mt-5">
+            <div class="text-center">
+              <h4>Thursday</h4>
               <h3 class="hours mt-4" id="w1th">0</h3>
-              <button class="btn btn-sm btn-outline-success" onclick="addHour(0, 3)">+</button>
-              <button class="btn btn-sm btn-outline-danger" onclick="subHour(0, 3)">-</button>
+              <button class="btn btn-sm shadow btn-outline-success mt-2" onclick="addHour(0, 3)">+</button>
+              <button class="btn btn-sm shadow btn-outline-danger mt-2" onclick="subHour(0, 3)">-</button>
             </div>
           </div>
           <div class="col d-flex justify-content-center">
-            <h2>Friday</h2>
-            <div class="mt-5">
+            <div class="text-center">
+              <h4>Friday</h4>
               <h3 class="hours mt-4" id="w1f">0</h3>
-              <button class="btn btn-sm btn-outline-success" onclick="addHour(0, 4)">+</button>
-              <button class="btn btn-sm btn-outline-danger" onclick="subHour(0, 4)">-</button>
+              <button class="btn btn-sm shadow btn-outline-success mt-2" onclick="addHour(0, 4)">+</button>
+              <button class="btn btn-sm shadow btn-outline-danger mt-2" onclick="subHour(0, 4)">-</button>
             </div>
           </div>
           <div class="col d-flex justify-content-center">
-            <h2>Week 1 Total</h2>
-            <div class=" mt-5">
+            <div class="text-center">
+              <h4>Week 1 Total</h4>
               <h3 class="hours mt-4" id="week1Total">0</h3>
             </div>
           </div>
         </div>
 
         <!-- week 2 -->
-        <div class="row mt-5">
-          <div class="col d-flex justify-content-center">
-            <h2>Monday</h2>
-            <div class="mt-5">
-              <h3 class="hours mt-4" id="w2m">0</h3>
-              <button class="btn btn-sm btn-outline-success" onclick="addHour(1, 0)">+</button>
-              <button class="btn btn-sm btn-outline-danger" onclick="subHour(1, 0)">-</button>
+        <div class="mt-4">
+          <div class="row py-3 w2">
+            <div class="col d-flex justify-content-center">
+              <div class="text-center">
+                <h4>Monday</h4>
+                <h3 class="hours mt-4" id="w2m">0</h3>
+                <button class="btn btn-sm shadow btn-outline-success mt-2" onclick="addHour(1, 0)">+</button>
+                <button class="btn btn-sm shadow btn-outline-danger mt-2" onclick="subHour(1, 0)">-</button>
+              </div>
             </div>
-          </div>
-          <div class="col d-flex justify-content-center">
-            <h2>Tuesday</h2>
-            <div class="mt-5">
-              <h3 class="hours mt-4" id="w2tu">0</h3>
-              <button class="btn btn-sm btn-outline-success" onclick="addHour(1, 1)">+</button>
-              <button class="btn btn-sm btn-outline-danger" onclick="subHour(1, 1)">-</button>
+            <div class="col d-flex justify-content-center">
+              <div class="text-center">
+                <h4>Tuesday</h4>
+                <h3 class="hours mt-4" id="w2tu">0</h3>
+                <button class="btn btn-sm shadow btn-outline-success mt-2" onclick="addHour(1, 1)">+</button>
+                <button class="btn btn-sm shadow btn-outline-danger mt-2" onclick="subHour(1, 1)">-</button>
+              </div>
             </div>
-          </div>
-          <div class="col d-flex justify-content-center">
-            <h2>Wednesday</h2>
-            <div class="mt-5">
-              <h3 class="hours mt-4" id="w2w">0</h3>
-              <button class="btn btn-sm btn-outline-success" onclick="addHour(1, 2)">+</button>
-              <button class="btn btn-sm btn-outline-danger" onclick="subHour(1, 2)">-</button>
+            <div class="col d-flex justify-content-center">
+              <div class="text-center">
+                <h4>Wednesday</h4>
+                <h3 class="hours mt-4" id="w2w">0</h3>
+                <button class="btn btn-sm shadow btn-outline-success mt-2" onclick="addHour(1, 2)">+</button>
+                <button class="btn btn-sm shadow btn-outline-danger mt-2" onclick="subHour(1, 2)">-</button>
+              </div>
             </div>
-          </div>
-          <div class="col d-flex justify-content-center">
-            <h2>Thursday</h2>
-            <div class="mt-5">
-              <h3 class="hours mt-4" id="w2th">0</h3>
-              <button class="btn btn-sm btn-outline-success" onclick="addHour(1, 3)">+</button>
-              <button class="btn btn-sm btn-outline-danger" onclick="subHour(1, 3)">-</button>
+            <div class="col d-flex justify-content-center">
+              <div class="text-center">
+                <h4>Thursday</h4>
+                <h3 class="hours mt-4" id="w2th">0</h3>
+                <button class="btn btn-sm shadow btn-outline-success mt-2" onclick="addHour(1, 3)">+</button>
+                <button class="btn btn-sm shadow btn-outline-danger mt-2" onclick="subHour(1, 3)">-</button>
+              </div>
             </div>
-          </div>
-          <div class="col d-flex justify-content-center">
-            <h2>Friday</h2>
-            <div class="mt-5">
-              <h3 class="hours mt-4" id="w2f">0</h3>
-              <button class="btn btn-sm btn-outline-success" onclick="addHour(1, 4)">+</button>
-              <button class="btn btn-sm btn-outline-danger" onclick="subHour(1, 4)">-</button>
+            <div class="col d-flex justify-content-center">
+              <div class="text-center">
+                <h4>Friday</h4>
+                <h3 class="hours mt-4" id="w2f">0</h3>
+                <button class="btn btn-sm shadow btn-outline-success mt-2" onclick="addHour(1, 4)">+</button>
+                <button class="btn btn-sm shadow btn-outline-danger mt-2" onclick="subHour(1, 4)">-</button>
+              </div>
             </div>
-          </div>
-          <div class="col d-flex justify-content-center">
-            <h2>Week 2 Total</h2>
-            <div class=" mt-5">
-              <h3 class="hours mt-4" id="week2Total">0</h3>
+            <div class="col d-flex justify-content-center">
+              <div class="text-center">
+                <h4>Week 2 Total</h4>
+                <h3 class="hours mt-4" id="week2Total">0</h3>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="row mt-5">
-      <div class="col-2 offset-4 mt-5">
+    <div class="row mt-1 bottom">
+      <div class="col-2 offset-2 mt-5">
         <div class="input-group mt-5">
-          <input id="hourlyWage" type="text" class="form-control shadow" placeholder="Hourly wage..." aria-label=""
+          <input id="hourlyWage" type="text" class="form-control shadow mt-5" placeholder="Hourly wage..." aria-label=""
             aria-describedby="basic-addon1" data-target="">
           <div class="input-group-append">
-            <button class="btn btn-success shadow" type="button" onclick="earned()">Submit</button>
+            <button class="btn btn-success shadow mt-5" type="button" onclick="earned()">Submit</button>
           </div>
         </div>
-
       </div>
 
-      <div class="col-6">
+      <div class="col-6 mt-5">
         <div class="row">
           <div class="col-10 d-flex justify-content-end">
             <h2 class="cummulative mt-5">Total Hours Worked:</h2>
@@ -154,7 +155,6 @@
             <h2 class="" id="grandPay">0</h2>
           </div>
         </div>
-
       </div>
 
     </div>
