Add weekly total display, CSS.

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <div class="container-fluid">
     <div class="row mt-4">
       <div class="col-12 text-center">
-        <h2>Bi-Weekly-TimeSheet</h2>
+        <h2>Bi-Weekly TimeSheet</h2>
       </div>
     </div>
 
-    <!-- week 1, 2 -->
+    <!-- week 1 -->
     <div class="row mt-4 top">
       <div class="col-10 offset-1">
         <div class="row mt-2 w1 py-3">
@@ -67,8 +67,9 @@
           </div>
           <div class="col d-flex justify-content-center">
             <div class="text-center">
-              <h4>Week 1 Total</h4>
-              <h3 class="hours mt-4" id="week1Total">0</h3>
+              <h4>Week 1 Totals</h4>
+              <h4 class="hours mt-4">Hours: <span id="week1Total">0</span></h4>
+              <h4 class="hours mt-4">$ <span id="week1Pay">0</span></h4>
             </div>
           </div>
         </div>
@@ -118,8 +119,9 @@
             </div>
             <div class="col d-flex justify-content-center">
               <div class="text-center">
-                <h4>Week 2 Total</h4>
-                <h3 class="hours mt-4" id="week2Total">0</h3>
+                <h4>Week 2 Totals</h4>
+                <h4 class="hours mt-4">Hours: <span id="week2Total">0</span></h4>
+                <h4 class="hours mt-4">$ <span id="week2Pay">0</span></h4>
               </div>
             </div>
           </div>
@@ -158,7 +160,6 @@
       </div>
 
     </div>
-
   </div>
 
   <script src="main.js"></script>
